--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </div>
 <div class="flex flex-col md:flex-row items-center gap-12">
 <div class="md:w-1/2">
-<img alt="Equipa O Texugo" class="rounded-lg shadow-lg w-full" src="https://images.unsplash.com/photo-1526666923127-b2970f64b422?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2072&amp;q=80"/>
+<img alt="Equipa O Texugo - Pedro e Bernardo - Foto e Video" class="rounded-lg shadow-lg w-full" src="images/Pedro e Bernardo.jpg"/>
 </div>
 <div class="md:w-1/2">
 <h3 class="text-2xl font-bold mb-6">Quem é O Texugo?</h3>
