--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </div>
 <div class="flex flex-col md:flex-row items-center gap-12">
 <div class="md:w-1/2">
-<img alt="Equipa O Texugo - Pedro e Bernardo - Foto e Video" class="rounded-lg shadow-lg w-full" src="images/Pedro e Bernardo.jpg"/>
+<img alt="Equipa O Texugo - Pedro e Bernardo - Foto e Video" src="images/Pedro e Bernardo.jpg"/>
 </div>
 <div class="md:w-1/2">
 <h3 class="text-2xl font-bold mb-6">Quem é O Texugo?</h3>
