--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Al+Nile:wght@400;500;600;700&amp;family=Abhaya+Libre:wght@400;500;600;700&amp;family=Alatsi&amp;display=swap" rel="stylesheet"/>
+<link rel="icon" type="image/png" href="images/toplogo.png"/>
 <style>
         body {
             font-family: 'Abhaya Libre', serif;
@@ -22,9 +23,9 @@
             color: #000000;
         }
         .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('https://images.unsplash.com/photo-1515934751635-ce81d32e071d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
+            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/LEA_1476.jpg'); 
             background-size: cover;
-            background-position: center;
+            background-position: top;
             min-height: 90vh;
         }
         .carousel-container {
@@ -58,14 +59,15 @@
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 <div class="flex justify-between h-16">
 <div class="flex items-center">
-<a class="text-xl font-bold text-black" href="#">O TEXUGO</a>
+    <img src="images/toplogo.png" alt="Logo O Texugo" class="w-12 h-12 mr-2 rounded" />
+    <a class="text-xl font-bold text-black" href="#">O TEXUGO</a>
 </div>
 <div class="hidden md:flex items-center space-x-8">
 <a class="text-gray-600 hover:text-black transition" href="#sobre">Sobre Nós</a>
 <a class="text-gray-600 hover:text-black transition" href="#portfolio">Portfólio</a>
 <a class="text-gray-600 hover:text-black transition" href="#testemunhos">Testemunhos</a>
 <a class="text-gray-600 hover:text-black transition" href="#blog">Blog</a>
-<a class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800 transition" href="#contacto">Reserva agora</a>
+<a class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800 transition" href="#contacto">Contactar</a>
 </div>
 <div class="md:hidden flex items-center">
 <button class="text-black focus:outline-none" id="menu-toggle">
@@ -86,8 +88,8 @@
 <!-- Hero Section -->
 <section class="hero-section flex items-center justify-center text-center text-white pt-16">
 <div class="px-4 sm:px-6 lg:px-8 max-w-4xl mx-auto">
-<h1 class="text-4xl md:text-6xl font-bold mb-6 font-[Alatsi]">Vamos contar a vossa história</h1>
-<p class="text-xl md:text-2xl mb-10">Fotografia e videografia de casamento que conta a sua história única com emoção e autenticidade.</p>
+<h1 class="text-4xl md:text-6xl font-bold mb-6 font-[Alatsi] text-white">Vamos contar a vossa história</h1>
+<p class="text-xl md:text-2xl mb-10">Fotografia e videografia de casamento que conta a vossa história, única, com emoção e autenticidade.</p>
 <div class="flex justify-center">
 <a class="bg-white text-black px-8 py-3 rounded hover:bg-gray-100 transition duration-300" href="#contacto">Fala connosco</a>
 </div>
@@ -106,9 +108,9 @@
 </div>
 <div class="md:w-1/2">
 <h3 class="text-2xl font-bold mb-6">Quem é O Texugo?</h3>
-<p class="mb-6">Somos uma equipa apaixonada por capturar os momentos mais genuínos e emocionantes do seu grande dia. Acreditamos que cada casamento é único e merece ser documentado com sensibilidade e arte.</p>
-<p class="mb-6">O nosso estilo combina o melhor da fotografia documental com um toque editorial, resultando em imagens que contam a sua história de forma autêntica e bela.</p>
-<p class="mb-8">Trabalhamos em todo Portugal, acompanhando os casais desde os preparativos até ao último baile, garantindo que cada momento especial seja preservado para sempre.</p>
+<p class="mb-6 text-justify">O texugo é um mamífero da família Mustelidae. Tem pernas curtas e vive habitualmente em tocas. É especialmente ativo à noite e bastante sociável. Alguns, adoram contar histórias. <strong>Este vai contar a vossa!</strong></p>
+<p class="mb-6 text-justify">Para isso, O Texugo conta com a ajuda do Pedro e do Bernardo, um fotógrafo e um videógrafo, sempre a postos para captar todos os momentos, sorrisos e sentimentos, únicos e irrepetíveis. </p>
+<p class="mb-8 text-justify">Trabalhamos em todo Portugal, acompanhando os casais desde os preparativos até à última dança, garantindo que cada momento especial seja preservado para sempre.</p>
 <a class="bg-black text-white px-6 py-3 rounded hover:bg-gray-800 transition inline-block" href="#contacto">Contactar</a>
 </div>
 </div>
@@ -120,40 +122,39 @@
 <div class="text-center mb-16">
 <h2 class="text-3xl md:text-4xl font-bold mb-4">Portfólio</h2>
 <div class="w-20 h-1 bg-black mx-auto"></div>
-<p class="mt-6 max-w-2xl mx-auto">Explore alguns dos nossos trabalhos mais recentes e descubra como captamos a magia dos casamentos.</p>
 </div>
 <div class="relative max-w-6xl mx-auto">
 <div class="carousel-container overflow-hidden">
 <div class="carousel-slides flex transition-transform duration-300">
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 1" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1583939003579-730e3918a45a?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=1974&amp;q=80"/>
+<img alt="Padrinhos a brindar na celebração do casamento" class="w-full h-[600px] object-cover" src="images\L&G-84.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 2" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80"/>
+<img alt="Pormenor do cabelo da noiva com penteado elaborado" class="w-full h-[600px] object-cover" src="images\L&G-131.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 3" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1519657337289-077653f724ed?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80"/>
+<img alt="Revelação emocionante do género do bebé no gender reveal / chá revelação" class="w-full h-[600px] object-cover" src="images\CHA_0344.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 4" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1519671482749-fd09be7ccebf?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80"/>
+<img alt="Decoração elegante da mesa do casamento com velas e flores" class="w-full h-[600px] object-cover" src="images\L&G-544.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 5" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1523438885200-e635ba2c371e?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=1974&amp;q=80"/>
+<img alt="Sessão fotográfica familiar na natureza com familiares sorridentes" class="w-full h-[600px] object-cover" src="images\LEA_0550.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 6" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1515934751635-ce81d32e071d?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80"/>
+<img alt="Casal apaixonado a olhar nos olhos durante o casamento" class="w-full h-[600px] object-cover" src="images\SS_L&G-51.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 7" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1513151233558-d860c5398176?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80"/>
+<img alt="Fotografia de grupo do baptismo com família e padrinhos sorridentes" class="w-full h-[600px] object-cover" src="images\BCM_0520.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 8" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1526666923127-b2970f64b422?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2072&amp;q=80"/>
+<img alt="Noiva e damas de honor a prepararem-se com maquilhagem e penteados" class="w-full h-[600px] object-cover" src="images\L&G-99.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 9" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1511285560929-80b456fe4050?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2069&amp;q=80"/>
+<img alt="Pormenor dos sapatos do noivo, polidos e elegantes" class="w-full h-[600px] object-cover" src="images\L&G-50.jpg"/>
 </div>
 <div class="carousel-slide w-full flex-shrink-0">
-<img alt="Wedding photo 10" class="w-full h-[600px] object-cover" src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80"/>
+<img alt="Noivo e padrinhos a prepararem-se, a ajustar fatos e botões de punho" class="w-full h-[600px] object-cover" src="images\L&G-55.jpg"/>
 </div>
 </div>
 </div>
@@ -172,10 +173,10 @@
 <div class="text-center mb-16">
 <h2 class="text-3xl md:text-4xl font-bold mb-4">Testemunhos</h2>
 <div class="w-20 h-1 bg-black mx-auto"></div>
-<p class="mt-6 max-w-2xl mx-auto">O que dizem os nossos casais sobre a experiência de trabalhar connosco.</p>
+<p class="mt-6 max-w-2xl mx-auto">O que dizem os nossos casais sobre a experiência de trabalhar com O Texugo.</p>
 </div>
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-<!-- Testimonial 1 -->
+<!-- Testemunho  1 -->
 <div class="testimonial-card p-8 rounded-lg shadow-md">
 <div class="flex items-center mb-4">
 <div class="text-yellow-400">
@@ -186,18 +187,18 @@
 <i class="fas fa-star"></i>
 </div>
 </div>
-<p class="mb-6 italic">"O Texugo capturou a essência do nosso dia de uma forma que nunca imaginámos possível. Cada foto conta uma história e revive as emoções que sentimos. Foi a melhor decisão que tomámos!"</p>
+<p class="mb-6 italic">"Adorámos o trabalho do Pedro e do Bernardo! Desde o primeiro momento sentimo-nos super à vontade. Foi tudo muito natural e divertido. As fotos ficaram lindas e transmitem mesmo a felicidade daquele dia especial. Muito obrigado."</p>
 <div class="flex items-center">
-<div class="w-12 h-12 rounded-full overflow-hidden mr-4">
-<img alt="Ana e Miguel" class="w-full h-full object-cover" src="https://randomuser.me/api/portraits/women/43.jpg"/>
+<div class="w-12 h-12 rounded-full overflow-hidden mr-4 flex-shrink-0">
+<img alt="Chá revelação / Gender reveal" class="w-full h-full object-cover" src="images\CHA_0344_user.jpg"/>
 </div>
 <div>
-<h4 class="font-bold">Ana e Miguel</h4>
-<p class="text-sm text-gray-600">Casamento no Alentejo, 2022</p>
+<h4 class="font-bold">Carlota e Manuel</h4>
+<p class="text-sm text-gray-600">Chá revelação da Carminho, 2024</p>
 </div>
 </div>
 </div>
-<!-- Testimonial 2 -->
+<!-- Testemunho 2 -->
 <div class="testimonial-card p-8 rounded-lg shadow-md">
 <div class="flex items-center mb-4">
 <div class="text-yellow-400">
@@ -208,18 +209,18 @@
 <i class="fas fa-star"></i>
 </div>
 </div>
-<p class="mb-6 italic">"O vídeo que nos fizeram é absolutamente cinematográfico. Choramos todas as vezes que o vemos. A equipa foi discreta, profissional e conseguiu captar todos os momentos especiais sem interferir."</p>
+<p class="mb-6 italic">"Foi espetacular fotografar com o Texugo! Gostámos imenso da forma descontraída como tudo aconteceu. Rimos, conversámos e quase esquecemos que havia câmara. Tanto as imagens como o vídeo ficaram super naturais e tranportam-nos para o dia feliz em família que passámos."</p>
 <div class="flex items-center">
-<div class="w-12 h-12 rounded-full overflow-hidden mr-4">
-<img alt="Sofia e Tiago" class="w-full h-full object-cover" src="https://randomuser.me/api/portraits/men/32.jpg"/>
+<div class="w-12 h-12 rounded-full overflow-hidden mr-4 flex-shrink-0">
+<img alt="Sessão de família" class="w-full h-full object-cover aspect-square" src="images\LEA_0550_user.jpg"/>
 </div>
 <div>
-<h4 class="font-bold">Sofia e Tiago</h4>
-<p class="text-sm text-gray-600">Casamento no Porto, 2023</p>
+<h4 class="font-bold">Luísa e André</h4>
+<p class="text-sm text-gray-600">Sessão de família em Vila Nova de Cerveira, 2024</p>
 </div>
 </div>
 </div>
-<!-- Testimonial 3 -->
+<!-- Testemunho 3 -->
 <div class="testimonial-card p-8 rounded-lg shadow-md">
 <div class="flex items-center mb-4">
 <div class="text-yellow-400">
@@ -230,18 +231,18 @@
 <i class="fas fa-star"></i>
 </div>
 </div>
-<p class="mb-6 italic">"Desde o primeiro contacto até à entrega do álbum, tudo foi perfeito. Fizeram-nos sentir tão à vontade que quase esquecemos que estávamos a ser fotografados. As fotos são obras de arte que vamos guardar para sempre."</p>
+<p class="mb-6 italic">"O Bernardo e o Pedro foram impecáveis! Sentimo-nos logo tranquilos e tudo correu de forma simples e bonita. Gostámos imenso das fotos, captaram cada momento importante com muito carinho. Foi a melhor decisão que tomamos. Recomendamos 100%. Muito obrigado!"</p>
 <div class="flex items-center">
-<div class="w-12 h-12 rounded-full overflow-hidden mr-4">
-<img alt="Inês e João" class="w-full h-full object-cover" src="https://randomuser.me/api/portraits/women/65.jpg"/>
+<div class="w-12 h-12 rounded-full overflow-hidden mr-4 flex-shrink-0">
+<img alt="Baptizado" class="w-full h-full object-cover" src="images\BCM_0520.jpg"/>
 </div>
 <div>
-<h4 class="font-bold">Inês e João</h4>
-<p class="text-sm text-gray-600">Casamento em Lisboa, 2023</p>
+<h4 class="font-bold">Beatriz e Carlos</h4>
+<p class="text-sm text-gray-600">Baptizado do Carlinhos, 2024</p>
 </div>
 </div>
 </div>
-<!-- Testimonial 4 -->
+<!-- Testemunho 4 -->
 <div class="testimonial-card p-8 rounded-lg shadow-md">
 <div class="flex items-center mb-4">
 <div class="text-yellow-400">
@@ -252,14 +253,14 @@
 <i class="fas fa-star"></i>
 </div>
 </div>
-<p class="mb-6 italic">"A equipa do Texugo foi incrível desde o primeiro momento. As fotos capturaram todos os detalhes e emoções do nosso dia especial de uma forma tão natural e bonita. Recomendamos sem dúvida!"</p>
+<p class="mb-6 italic">"Eles foram incríveis no nosso casamento. Sempre simpáticos, atentos e com boa energia. Adorámos como conseguiram registar os momentos mais genuínos. As fotos têm mesmo a nossa cara e vão ser recordações preciosas para a vida."</p>
 <div class="flex items-center">
-<div class="w-12 h-12 rounded-full overflow-hidden mr-4">
-<img alt="Carlos e Marta" class="w-full h-full object-cover" src="https://randomuser.me/api/portraits/men/75.jpg"/>
+<div class="w-12 h-12 rounded-full overflow-hidden mr-4 flex-shrink-0">
+<img alt="Casamento" class="w-full h-full object-cover" src="images\Noivos.png"/>
 </div>
 <div>
-<h4 class="font-bold">Carlos e Marta</h4>
-<p class="text-sm text-gray-600">Casamento no Algarve, 2023</p>
+<h4 class="font-bold">Joana e Miguel</h4>
+<p class="text-sm text-gray-600">Casamento no Douro, 2025</p>
 </div>
 </div>
 </div>
