--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <p class="mb-6 italic">"Eles foram incríveis no nosso casamento. Sempre simpáticos, atentos e com boa energia. Adorámos como conseguiram registar os momentos mais genuínos. As fotos têm mesmo a nossa cara e vão ser recordações preciosas para a vida."</p>
 <div class="flex items-center">
 <div class="w-12 h-12 rounded-full overflow-hidden mr-4 flex-shrink-0">
-<img alt="Casamento" class="w-full h-full object-cover" src="images\Noivos.png"/>
+<img alt="Casamento" class="w-full h-full object-cover" src="images\Noivos.jpg"/>
 </div>
 <div>
 <h4 class="font-bold">Joana e Miguel</h4>
