--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="flex justify-between h-16">
 <div class="flex items-center">
     <img src="images/toplogo.png" alt="Logo O Texugo" class="w-12 h-12 mr-2 rounded" />
-    <img src="images/Nametop.png" alt="O Texugo Logo" class="w-max h-12" />
+    <img src="images/Nametop.png" alt="O Texugo Logo" class="w-20" />
 </div>
 <div class="hidden md:flex items-center space-x-8">
 <a class="text-gray-600 hover:text-black transition" href="#sobre">Sobre Nós</a>
