--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ O Texugo adora casamentos, baptizados, sessões em família, e todo o tipo de ev
 <i class="fas fa-star"></i>
 </div>
 </div>
-<p class="mb-6 italic">"O Bernardo e o Pedro foram impecáveis! Sentimo-nos logo tranquilos e tudo correu de forma simples e bonita. Gostámos imenso das fotos, captaram cada momento importante com muito carinho. Foi a melhor decisão que tomamos. Recomendamos 100%. Muito obrigado!"</p>
+<p class="mb-6 italic">"O Bernardo e o Pedro foram impecáveis! Sentimo-nos logo tranquilos e tudo correu de forma simples e bonita. Gostámos imenso das fotos, captaram cada momento importante com muito carinho. Foi a melhor decisão que tomámos. Recomendamos 100%. Muito obrigado!"</p>
 <div class="flex items-center">
 <div class="w-12 h-12 rounded-full overflow-hidden mr-4 flex-shrink-0">
 <img alt="Baptizado" class="w-full h-full object-cover" src="images\BCM_0520.jpg"/>
