--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="pt-PT">
 <head>
+<link rel="canonical" href="https://www.otexugo.net/">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>O Texugo Fotografia e Videografia de Casamento em Portugal</title>
